src/objects/Transaction_Application__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Code__c</fullName>
        <label>Cash Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <inlineHelpText>Lease Dimensions Check Number</inlineHelpText>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>INTEREST PAYMENT
PRINCIPAL PAYDOWN
ASSET WRITEDOWN
PAYMENT PAST DUE INTEREST
INTEREST CREDIT
INTEREST CREDIT REVERSAL
PRINCIPAL PAYDOWN REVERSAL
INTEREST PAYMENT REVERSAL
PRINCIPAL PAYMENT
PRINCIPAL WRITEDOWN
PRINCIPAL PAYMENT REVERSAL
PAST DUE INTEREST PAYMENT REVERSAL
PRINCIPAL WRITEDOWN REVERSAL</description>
        <inlineHelpText>Lease Dimensions Transaction Description</inlineHelpText>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBL PMT - INTEREST</fullName>
                </value>
                <value>
                    <fullName>IBL PRN PAYDOWN</fullName>
                </value>
                <value>
                    <fullName>WRITE DOWN ASST INVN</fullName>
                </value>
                <value>
                    <fullName>PAYMENT OTHER CHARGE</fullName>
                </value>
                <value>
                    <fullName>IBL INT CR</fullName>
                </value>
                <value>
                    <fullName>IBL INT CR REV</fullName>
                </value>
                <value>
                    <fullName>IBL PRN PAYDOWN REV</fullName>
                </value>
                <value>
                    <fullName>IBL PMT REV - INT</fullName>
                </value>
                <value>
                    <fullName>IBL PMT - PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>IBL PRN WRITE-DOWN</fullName>
                </value>
                <value>
                    <fullName>IBL PMT REV - PRN</fullName>
                </value>
                <value>
                    <fullName>PMT REV OTHER CHARGE</fullName>
                </value>
                <value>
                    <fullName>IBL PRN WRITE-DN REV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>Lease Dimensions Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Applied__c</fullName>
        <inlineHelpText>Amount of interest that is applied to the related Loan Payment. Should be negative when reducing interest owed.</inlineHelpText>
        <label>Interest Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <inlineHelpText>Lease Dimensions Invoice Due Date, used to find a loan payment to apply to.</inlineHelpText>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>Lease Dimensions Invoice Number</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment</label>
        <referenceTo>Loan_Payment__c</referenceTo>
        <relationshipLabel>Transaction Applications</relationshipLabel>
        <relationshipName>Transaction_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Applied__c</fullName>
        <inlineHelpText>Amount of principal that is applied to the related Loan Payment. Should be negative when reducing principal owed.</inlineHelpText>
        <label>Principal Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Paydown_Reason__c</fullName>
        <inlineHelpText>Paydown reason (triggers loan reamortization)</inlineHelpText>
        <label>Principal Paydown Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Paydown_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <inlineHelpText>Lease Dimensions Process Date</inlineHelpText>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <label>Transaction Application</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Transaction Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>